<resources>
    <!-- App-Name !-->
    <string name="app_name">Divisionsrechner</string>

    <!-- Eingabeaufforderung, Wert1 und Wert2 !-->
    <string name="gebe_zwei_zahlen_ein">Gebe zwei Zahlen ein!</string>
    <string name="dividenden">0</string>
    <string name="divisor">0</string>

    <!-- Divisionsbutton !-->
    <string name="btn_dividiere">Dividiere!</string>

    <!-- Ergebnistext + Wert !-->
    <string name="txtquotient">Quotient:</string>
    <string name="quotient">0.0</string>
    <string name="btn_reset">Reset</string>

    <!-- Fehlermeldungen !-->
    <string name="divnullfehler">Es darf nicht durch Null dividiert werden!</string>
    <string name="feldleer">Mindestens ein Wert fehlt!</string>
    <string name="sDivisor">Divisor</string>
    <string name="sDividend">Dividend</string>
</resources>
