<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFF"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/twEingabehint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/gebe_zwei_zahlen_ein"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:layout_conversion_absoluteHeight="29dp"
        tools:layout_conversion_absoluteWidth="360dp"
        tools:layout_conversion_absoluteX="0dp"
        tools:layout_conversion_absoluteY="25dp" />

    <EditText
        android:id="@+id/eTeingabe1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:ems="50"
        android:inputType="numberDecimal"
        android:text="@string/dividenden"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twEingabehint"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:layout_conversion_absoluteHeight="42dp"
        tools:layout_conversion_absoluteWidth="360dp"
        tools:layout_conversion_absoluteX="0dp"
        tools:layout_conversion_absoluteY="69dp">

        <requestFocus
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="0dp"
            tools:layout_conversion_absoluteX="0dp"
            tools:layout_conversion_absoluteY="69dp" />
    </EditText>


    <EditText
        android:id="@+id/eTeingabe2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="50"
        android:inputType="numberDecimal"
        android:text="@string/divisor"
        app:layout_constraintLeft_toLeftOf="@+id/eTeingabe1"
        app:layout_constraintRight_toRightOf="@+id/eTeingabe1"
        app:layout_constraintTop_toBottomOf="@+id/eTeingabe1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:layout_conversion_absoluteHeight="42dp"
        tools:layout_conversion_absoluteWidth="360dp"
        tools:layout_conversion_absoluteX="0dp"
        tools:layout_conversion_absoluteY="112dp" />

    <Button
        android:id="@+id/btndiv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:text="@string/btn_dividiere"
        app:layout_constraintHorizontal_bias="0.249"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/twEingabehint"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/twErgname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/txtquotient"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/twQuotient"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/twQuotient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/quotient"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTeingabe2"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/btnrst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_reset"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintRight_toRightOf="@+id/eTeingabe2"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/eTeingabe2"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/twQuotient"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="48dp"
        app:layout_constraintHorizontal_bias="0.0" />


</android.support.constraint.ConstraintLayout>
